--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://sunpech.com"
 languageCode = "en-us"
 title = "sunpech.com"
 theme = "hugo-basic"
