Fixed title showing double in tab when on home page. Now checks for match with text 'Home'.

--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,11 @@ author = "Steven Suwatanapongched"
     url = "/posts/"
     weight = 30
   [[menu.main]]
+    identifier = "best"
+    name = "Best"
+    url = "/best/"
+    weight = 35
+  [[menu.main]]
     identifier = "affiliates"
     name = "Affiliates"
     url = "/affiliates/"
