Added support for robots.txt, sitemap.xml, 404.html, and atom.xml.

--- a/config.toml
+++ b/config.toml
@@ -58,3 +58,15 @@ author = "Steven Suwatanapongched"
   changefreq = "monthly"
   priority = 0.5
   filename = "sitemap.xml"
+
+[mediaTypes]
+    [mediaTypes."application/atom"]
+    suffix = "xml"
+
+    [outputFormats.Atom]
+    mediaType = "application/atom"
+    baseName = "index"
+    isPlainText = false
+
+[outputs]
+  home = ["HTML", "Atom"]
