Author front matter needs to be a list??

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = ["hugo-basic", "hugo-atom-feed"]
 Paginate = 10
 timezone = "America/Chicago"
 googleAnalytics = "UA-126684-2"
-author = "Steven Suwatanapongched"
+author = ["Steven Suwatanapongched"]
 
 [params]
   mainSections = ["posts"]
