--- a/config.toml
+++ b/config.toml
@@ -74,7 +74,7 @@ googleAnalytics = "UA-126684-2"
 
   [outputFormats.Atom]
     mediaType = "application/atom"
-    baseName = "feed"
+    baseName = "atom"
     isPlainText = false
 
 disableKinds = ['RSS']
