Updated home page to be 2 column layout with 10 recent posts, and tags column. Fixed thumbnail for 2020 C2E2 post.

--- a/config.toml
+++ b/config.toml
@@ -79,3 +79,7 @@ googleAnalytics = "UA-126684-2"
     isPlainText = false
 
 disableKinds = ['RSS']
+
+[taxonomies]
+tag = "tags"
+category = "categories"
